change in main branch

--- a/tugas/pelatihan-vcs-2023/mochavin/index.html
+++ b/tugas/pelatihan-vcs-2023/mochavin/index.html
@@ -1,50 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Landing Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
+  <title>Landing Page</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Beranda</a></li>
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">Layanan</a></li>
-                <li><a href="#">Kontak</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Beranda</a></li>
+        <li><a href="#">Tentang Kami</a></li>
+        <li><a href="#">Layanan</a></li>
+        <li><a href="#">Kontak</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section class="hero">
-        <h1>Selamat Datang di Landing Page Sederhana</h1>
-        <p>Ini adalah contoh landing page sederhana dengan HTML dan CSS.</p>
-        <a href="#" class="cta-button">Daftar Sekarang</a>
-    </section>
+  <section class="hero">
+    <h1>Selamat Datang di Landing Page Sederhana</h1>
+    <h2>This change in main branch</h2>
+    <p>Ini adalah contoh landing page sederhana dengan HTML dan CSS.</p>
+    <a href="#" class="cta-button">Daftar Sekarang</a>
+  </section>
 
-    <section class="about">
-        <h2>Tentang Kami</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim debitis deserunt dolore cupiditate sequi. Placeat, corrupti temporibus rerum maiores tempora nemo ad error possimus asperiores, non molestias natus, alias fugit? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, placeat voluptate. Quisquam natus dolore, mollitia non magni accusamus a amet perspiciatis consectetur voluptatum iure ex iste eius nulla minima pariatur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis saepe distinctio nemo voluptate modi adipisci velit eaque ex architecto quisquam similique, ab suscipit ad voluptatibus, eius molestias dicta libero cupiditate.</p>
-    </section>
+  <section class="about">
+    <h2>Tentang Kami</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim debitis deserunt dolore cupiditate sequi. Placeat,
+      corrupti temporibus rerum maiores tempora nemo ad error possimus asperiores, non molestias natus, alias fugit?
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium, placeat voluptate. Quisquam natus dolore,
+      mollitia non magni accusamus a amet perspiciatis consectetur voluptatum iure ex iste eius nulla minima pariatur.
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis saepe distinctio nemo voluptate modi adipisci
+      velit eaque ex architecto quisquam similique, ab suscipit ad voluptatibus, eius molestias dicta libero cupiditate.
+    </p>
+  </section>
 
-    <section class="services">
-        <h2>Layanan Kami</h2>
-        <ul>
-            <li>Layanan 1</li>
-            <li>Layanan 2</li>
-            <li>Layanan 3</li>
-        </ul>
-    </section>
+  <section class="services">
+    <h2>Layanan Kami</h2>
+    <ul>
+      <li>Layanan 1</li>
+      <li>Layanan 2</li>
+      <li>Layanan 3</li>
+    </ul>
+  </section>
 
-    <section class="contact">
-        <h2>Kontak Kami</h2>
-        <p>Jika Anda memiliki pertanyaan atau membutuhkan bantuan, silakan hubungi kami di <a href="mailto:info@example.com">info@example.com</a>.</p>
-    </section>
+  <section class="contact">
+    <h2>Kontak Kami</h2>
+    <p>Jika Anda memiliki pertanyaan atau membutuhkan bantuan, silakan hubungi kami di <a
+        href="mailto:info@example.com">info@example.com</a>.</p>
+  </section>
 
-    <footer>
-        <p>Hak Cipta &copy; 2023 Landing Page Sederhana</p>
-    </footer>
+  <footer>
+    <p>Hak Cipta &copy; 2023 Landing Page Sederhana</p>
+  </footer>
 </body>
+
 </html>
